Make function names consistent, following PEP 8

--- a/code/00_network_preprocessing.ipynb
+++ b/code/00_network_preprocessing.ipynb
@@ -137,7 +137,7 @@
     "nodes_id = list(nodes.nodeID)\n",
     "nodes_x = list(nodes.geometry.x)\n",
     "nodes_y = list(nodes.geometry.y)\n",
-    "nodes_coords = list(zip(NormalizeData(nodes_x), NormalizeData(nodes_y)))"
+    "nodes_coords = list(zip(normalize_data(nodes_x), normalize_data(nodes_y)))"
    ]
   },
   {
@@ -217,11 +217,11 @@
    "source": [
     "# Plot to double-check\n",
     "if debug:\n",
-    "    plotCheck(\n",
+    "    plot_check(\n",
     "        G,\n",
     "        nodes_id,\n",
     "        nodes_coords,\n",
-    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        vertex_size=get_vertex_size_constant(G.vcount()),\n",
     "        edge_width=get_edgewidth(G.ecount()),\n",
     "    )"
    ]
@@ -258,11 +258,11 @@
    "source": [
     "# Plot to double-check\n",
     "if debug:\n",
-    "    plotCheck(\n",
+    "    plot_check(\n",
     "        G,\n",
     "        nodes_id,\n",
     "        nodes_coords,\n",
-    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        vertex_size=get_vertex_size_constant(G.vcount()),\n",
     "        edge_width=get_edgewidth(G.ecount()),\n",
     "    )"
    ]
@@ -306,11 +306,11 @@
    "source": [
     "# Plot to double-check\n",
     "if debug:\n",
-    "    plotCheck(\n",
+    "    plot_check(\n",
     "        G,\n",
     "        nodes_id,\n",
     "        nodes_coords,\n",
-    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        vertex_size=get_vertex_size_constant(G.vcount()),\n",
     "        edge_width=get_edgewidth(G.ecount()),\n",
     "    )"
    ]
@@ -355,11 +355,11 @@
    "source": [
     "# Plot to double-check\n",
     "if debug:\n",
-    "    plotCheck(\n",
+    "    plot_check(\n",
     "        G,\n",
     "        nodes_id,\n",
     "        nodes_coords,\n",
-    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        vertex_size=get_vertex_size_constant(G.vcount()),\n",
     "        edge_width=get_edgewidth(G.ecount()),\n",
     "    )"
    ]
@@ -433,11 +433,11 @@
    "source": [
     "# Plot to double-check\n",
     "if debug:\n",
-    "    plotCheck(\n",
+    "    plot_check(\n",
     "        G,\n",
     "        nodes_id,\n",
     "        nodes_coords,\n",
-    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        vertex_size=get_vertex_size_constant(G.vcount()),\n",
     "        edge_width=get_edgewidth(G.ecount()),\n",
     "    )"
    ]
@@ -484,11 +484,11 @@
    "source": [
     "# Plot to double-check\n",
     "if debug:\n",
-    "    plotCheck(\n",
+    "    plot_check(\n",
     "        G,\n",
     "        nodes_id,\n",
     "        nodes_coords,\n",
-    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        vertex_size=get_vertex_size_constant(G.vcount()),\n",
     "        edge_width=get_edgewidth(G.ecount()),\n",
     "    )"
    ]
@@ -525,11 +525,11 @@
    "source": [
     "# Plot to double-check\n",
     "if debug:\n",
-    "    plotCheck(\n",
+    "    plot_check(\n",
     "        G,\n",
     "        nodes_id,\n",
     "        nodes_coords,\n",
-    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        vertex_size=get_vertex_size_constant(G.vcount()),\n",
     "        edge_width=get_edgewidth(G.ecount()),\n",
     "    )"
    ]
@@ -676,11 +676,11 @@
     "    for e in G.es:\n",
     "        edge_widths.append((e[\"poi_diversity\"] * 2) + 0.25)\n",
     "\n",
-    "    fig = plotCheck(\n",
+    "    fig = plot_check(\n",
     "        G,\n",
     "        nodes_id,\n",
     "        nodes_coords,\n",
-    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        vertex_size=get_vertex_size_constant(G.vcount()),\n",
     "        edge_width=edge_widths,\n",
     "    )\n",
     "    plt.text(0, 0.04, \"POI diversity\")\n",
@@ -713,11 +713,11 @@
     "        else:\n",
     "            edge_colors.append(\"grey\")\n",
     "\n",
-    "    fig = plotCheck(\n",
+    "    fig = plot_check(\n",
     "        G,\n",
     "        nodes_id,\n",
     "        nodes_coords,\n",
-    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        vertex_size=get_vertex_size_constant(G.vcount()),\n",
     "        edge_color=edge_colors,\n",
     "    )\n",
     "    plt.text(0, 0.04, \"Water links highlighted\")\n",
@@ -750,11 +750,11 @@
     "        else:\n",
     "            edge_colors.append(\"red\")\n",
     "\n",
-    "    fig = plotCheck(\n",
+    "    fig = plot_check(\n",
     "        G,\n",
     "        nodes_id,\n",
     "        nodes_coords,\n",
-    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        vertex_size=get_vertex_size_constant(G.vcount()),\n",
     "        edge_color=edge_colors,\n",
     "    )\n",
     "    plt.text(0, 0.04, \"Max slopes highlighted\")\n",
