--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -131,7 +131,7 @@
     "nodes_id = list(nodes.nodeID)\n",
     "nodes_x = list(nodes.geometry.x)\n",
     "nodes_y = list(nodes.geometry.y)\n",
-    "nodes_coords = list(zip(NormalizeData(nodes_x), NormalizeData(nodes_y)))"
+    "nodes_coords = list(zip(normalize_data(nodes_x), normalize_data(nodes_y)))"
    ]
   },
   {
@@ -240,11 +240,11 @@
     "        else:\n",
     "            edge_colors.append(\"grey\")\n",
     "\n",
-    "    fig = plotCheck(\n",
+    "    fig = plot_check(\n",
     "        G,\n",
     "        nodes_id,\n",
     "        nodes_coords,\n",
-    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        vertex_size=get_vertex_size_constant(G.vcount()),\n",
     "        edge_color=edge_colors,\n",
     "    )\n",
     "    plt.text(\n",
@@ -321,10 +321,10 @@
     "# allloops_generator = nx.simple_cycles(Gnx, length_bound=LOOP_NUMNODE_BOUND)\n",
     "# for c in tqdm(allloops_generator):\n",
     "#     sourcenode = c[0]\n",
-    "#     c_length = getLoopLength(c)\n",
-    "#     c_max_slope = getLoopMaxSlope(c)\n",
-    "#     c_water = getLoopWaterProfile(c)\n",
-    "#     c_poi_diversity = getLoopPOIDiversity(c)\n",
+    "#     c_length = get_loop_length(c)\n",
+    "#     c_max_slope = get_loop_max_slope(c)\n",
+    "#     c_water = get_loop_water_profile(c)\n",
+    "#     c_poi_diversity = get_loop_poi_diversity(c)\n",
     "#     numloops_unique += 1\n",
     "#     if sourcenode in nodes_done:\n",
     "#         allloops_unique[sourcenode][\"loops\"].append(c)\n",
@@ -365,10 +365,10 @@
     "allloops_generator = nx.simple_cycles(Gnx, length_bound=LOOP_NUMNODE_BOUND)\n",
     "for c in tqdm(allloops_generator):\n",
     "    sourcenode = c[0]\n",
-    "    c_length = getLoopLength(c)\n",
-    "    c_max_slope = getLoopMaxSlope(c)\n",
-    "    c_water = getLoopWaterProfile(c)\n",
-    "    c_poi_diversity = getLoopPOIDiversity(c)\n",
+    "    c_length = get_loop_length(c)\n",
+    "    c_max_slope = get_loop_max_slope(c)\n",
+    "    c_water = get_loop_water_profile(c)\n",
+    "    c_poi_diversity = get_loop_poi_diversity(c)\n",
     "    for sourcenode in c:\n",
     "        numloops += 1\n",
     "        if sourcenode in nodes_done:\n",
