--- a/code/02_basic_statistics.ipynb
+++ b/code/02_basic_statistics.ipynb
@@ -119,11 +119,11 @@
    "source": [
     "# Plot to double-check\n",
     "if debug:\n",
-    "    plotCheck(\n",
+    "    plot_check(\n",
     "        G,\n",
     "        nodes_id,\n",
     "        nodes_coords,\n",
-    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        vertex_size=get_vertex_size_constant(G.vcount()),\n",
     "        edge_width=get_edgewidth(G.ecount()),\n",
     "    )"
    ]
@@ -393,7 +393,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plotCheck(\n",
+    "fig = plot_check(\n",
     "    G,\n",
     "    nodes_id,\n",
     "    nodes_coords,\n",
@@ -530,11 +530,11 @@
     "    else:\n",
     "        edge_colors.append(\"grey\")\n",
     "\n",
-    "fig = plotCheck(\n",
+    "fig = plot_check(\n",
     "    G,\n",
     "    nodes_id,\n",
     "    nodes_coords,\n",
-    "    vertex_size=get_vertexsize(G.vcount()),\n",
+    "    vertex_size=get_vertex_size_constant(G.vcount()),\n",
     "    edge_color=edge_colors,\n",
     ")\n",
     "plt.text(0, 0.04, \"Conforming face loops highlighted\")\n",
@@ -566,11 +566,11 @@
     "    else:\n",
     "        edge_colors.append(\"grey\")\n",
     "\n",
-    "fig = plotCheck(\n",
+    "fig = plot_check(\n",
     "    G,\n",
     "    nodes_id,\n",
     "    nodes_coords,\n",
-    "    vertex_size=get_vertexsize(G.vcount()),\n",
+    "    vertex_size=get_vertex_size_constant(G.vcount()),\n",
     "    edge_color=edge_colors,\n",
     ")\n",
     "plt.text(0, 0.04, \"Non-conforming face loops highlighted\")\n",
