--- a/code/03_scenario_analysis.ipynb
+++ b/code/03_scenario_analysis.ipynb
@@ -133,11 +133,11 @@
    "source": [
     "# Plot to double-check\n",
     "if debug:\n",
-    "    plotCheck(\n",
+    "    plot_check(\n",
     "        G,\n",
     "        nodes_id,\n",
     "        nodes_coords,\n",
-    "        vertex_size=get_vertexsize(G.vcount()),\n",
+    "        vertex_size=get_vertex_size_constant(G.vcount()),\n",
     "        edge_width=get_edgewidth(G.ecount()),\n",
     "    )"
    ]
@@ -229,7 +229,7 @@
     "    mask_this = (lengths_this >= RESTRICTIONS[\"looplength_min\"]) & (\n",
     "        lengths_this <= RESTRICTIONS[\"looplength_max\"]\n",
     "    )\n",
-    "    allloops_bound[sourcenode] = maskNode(allloops[sourcenode], mask_this)"
+    "    allloops_bound[sourcenode] = mask_node(allloops[sourcenode], mask_this)"
    ]
   },
   {
@@ -239,8 +239,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertex_sizes, numloops_max = getVertexSizes(allloops_bound)\n",
-    "fig = plotCheck(\n",
+    "vertex_sizes, numloops_max = get_vertex_sizes(allloops_bound)\n",
+    "fig = plot_check(\n",
     "    G,\n",
     "    nodes_id,\n",
     "    nodes_coords,\n",
@@ -282,7 +282,7 @@
     "    mask_this = lengths_this >= RESTRICTIONS[\"looplength_min\"]\n",
     "    mask_this &= lengths_this <= RESTRICTIONS[\"looplength_max\"]\n",
     "    mask_this &= maxslopes_this <= RESTRICTIONS[\"slope_max\"]\n",
-    "    allloops_bound[sourcenode] = maskNode(allloops[sourcenode], mask_this)"
+    "    allloops_bound[sourcenode] = mask_node(allloops[sourcenode], mask_this)"
    ]
   },
   {
@@ -292,7 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertex_sizes, numloops_max = getVertexSizes(allloops_bound)\n",
+    "vertex_sizes, numloops_max = get_vertex_sizes(allloops_bound)\n",
     "\n",
     "edge_colors = []\n",
     "for e in G.es:\n",
@@ -301,7 +301,7 @@
     "    else:\n",
     "        edge_colors.append(\"grey\")\n",
     "\n",
-    "fig = plotCheck(\n",
+    "fig = plot_check(\n",
     "    G,\n",
     "    nodes_id,\n",
     "    nodes_coords,\n",
@@ -369,7 +369,7 @@
     "            ):\n",
     "                water_enough = False\n",
     "        mask_this[i] = water_enough\n",
-    "        allloops_bound_watered[sourcenode] = maskNode(\n",
+    "        allloops_bound_watered[sourcenode] = mask_node(\n",
     "            allloops_bound[sourcenode], mask_this\n",
     "        )"
    ]
@@ -381,7 +381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertex_sizes, numloops_max = getVertexSizes(allloops_bound_watered)\n",
+    "vertex_sizes, numloops_max = get_vertex_sizes(allloops_bound_watered)\n",
     "\n",
     "edge_colors = []\n",
     "for e in G.es:\n",
@@ -402,7 +402,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plotCheck(\n",
+    "fig = plot_check(\n",
     "    G,\n",
     "    nodes_id,\n",
     "    nodes_coords,\n",
@@ -463,7 +463,7 @@
     "        pd = allloops_bound_watered[sourcenode][\"poi_diversity\"][i]\n",
     "        if pd >= 3:\n",
     "            mask_this[i] = True\n",
-    "    allloops_bound_watered_diverse[sourcenode] = maskNode(\n",
+    "    allloops_bound_watered_diverse[sourcenode] = mask_node(\n",
     "        allloops_bound_watered[sourcenode], mask_this\n",
     "    )"
    ]
@@ -475,7 +475,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertex_sizes, numloops_max = getVertexSizes(allloops_bound_watered_diverse)\n",
+    "vertex_sizes, numloops_max = get_vertex_sizes(allloops_bound_watered_diverse)\n",
     "\n",
     "edge_colors = []\n",
     "for e in G.es:\n",
@@ -502,7 +502,7 @@
    },
    "outputs": [],
    "source": [
-    "fig = plotCheck(\n",
+    "fig = plot_check(\n",
     "    G,\n",
     "    nodes_id,\n",
     "    nodes_coords,\n",
