Turn lists into numpy arrays for less data storage

--- a/code/03_scenario_analysis.ipynb
+++ b/code/03_scenario_analysis.ipynb
@@ -225,7 +225,7 @@
    "source": [
     "allloops_bound = {}\n",
     "for sourcenode in tqdm(allloops, desc=\"Restrict to scenario lenghts\"):\n",
-    "    lengths_this = np.array(allloops[sourcenode][\"lengths\"]) * MPERUNIT\n",
+    "    lengths_this = allloops[sourcenode][\"lengths\"] * MPERUNIT\n",
     "    mask_this = (lengths_this >= RESTRICTIONS[\"looplength_min\"]) & (\n",
     "        lengths_this <= RESTRICTIONS[\"looplength_max\"]\n",
     "    )\n",
@@ -277,8 +277,10 @@
    "source": [
     "allloops_bound = {}\n",
     "for sourcenode in tqdm(allloops, desc=\"Restrict to scenario gradients\"):\n",
-    "    lengths_this = np.array(allloops[sourcenode][\"lengths\"]) * MPERUNIT\n",
-    "    maxslopes_this = np.array(allloops[sourcenode][\"max_slopes\"])\n",
+    "    lengths_this = allloops[sourcenode][\"lengths\"] * MPERUNIT\n",
+    "    maxslopes_this = (\n",
+    "        allloops[sourcenode][\"max_slopes\"] / 100.0\n",
+    "    )  # max_slopes were multiplied by 100 for storage as uint16\n",
     "    mask_this = lengths_this >= RESTRICTIONS[\"looplength_min\"]\n",
     "    mask_this &= lengths_this <= RESTRICTIONS[\"looplength_max\"]\n",
     "    mask_this &= maxslopes_this <= RESTRICTIONS[\"slope_max\"]\n",
