--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-24  \n",
-    "Last modified: 2024-10-07"
+    "Last modified: 2024-10-11"
    ]
   },
   {
@@ -363,7 +363,7 @@
     "nodes_done = set()\n",
     "numloops = 0\n",
     "allloops_generator = nx.simple_cycles(Gnx, length_bound=LOOP_NUMNODE_BOUND)\n",
-    "for c in tqdm(allloops_generator):\n",
+    "for c in tqdm(allloops_generator, desc=\"Find all loops\"):\n",
     "    sourcenode = c[0]\n",
     "    c_length = get_loop_length(c)\n",
     "    c_max_slope = get_loop_max_slope(c)\n",
@@ -402,12 +402,37 @@
     "allloopnumnodes = np.zeros(numloops, dtype=int)\n",
     "allloopmaxslopes = np.zeros(numloops)\n",
     "i = 0\n",
-    "for j in tqdm(allloops):\n",
+    "for j in tqdm(allloops, desc=\"Extract global loop properties\"):\n",
     "    l = len(allloops[j][\"lengths\"])\n",
     "    alllooplengths[i : i + l] = allloops[j][\"lengths\"]\n",
     "    allloopnumnodes[i : i + l] = allloops[j][\"numnodes\"]\n",
     "    allloopmaxslopes[i : i + l] = allloops[j][\"max_slopes\"]\n",
     "    i += l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39e717fc-2787-4626-acdf-1a3a2ddf7b98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Turn lists into numpy arrays for less data storage\n",
+    "for sourcenode in tqdm(allloops, desc=\"Turn loop data into numpy arrays\"):\n",
+    "    for k, v in allloops[sourcenode].items():\n",
+    "        if k == \"lengths\":\n",
+    "            allloops[sourcenode][k] = np.array(\n",
+    "                allloops[sourcenode][k], dtype=np.float32\n",
+    "            )\n",
+    "        elif k == \"numnodes\":\n",
+    "            allloops[sourcenode][k] = np.array(allloops[sourcenode][k], dtype=np.uint8)\n",
+    "        elif k == \"max_slopes\":\n",
+    "            intslopes = [\n",
+    "                i * 100 for i in allloops[sourcenode][k]\n",
+    "            ]  # max_slopes are multiplied by 100 for storage as uint16\n",
+    "            allloops[sourcenode][k] = np.array(intslopes, dtype=np.uint16)\n",
+    "        elif k == \"poi_diversity\":\n",
+    "            allloops[sourcenode][k] = np.array(allloops[sourcenode][k], dtype=np.uint8)"
    ]
   },
   {
