Save more data as numpy arrays

--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-24  \n",
-    "Last modified: 2024-10-11"
+    "Last modified: 2024-10-12"
    ]
   },
   {
@@ -38,7 +38,7 @@
     "- [ ] Double-check loop/link lengths. For example 3-loop east of Faxe\n",
     "- [ ] Double-check edge_ids during simplifications\n",
     "- [ ] Re-think or drop due to coastline effects: Add node distances to closest kommune boundary\n",
-    "- [ ] Compress results (Jutland+Fyn = 50GB), by storing data smarter or algorithm, e.g. https://stackoverflow.com/questions/57983431/whats-the-most-space-efficient-way-to-compress-serialized-python-data\n",
+    "- [X] Compress results (Jutland+Fyn = 50GB), by storing data smarter or algorithm, e.g. https://stackoverflow.com/questions/57983431/whats-the-most-space-efficient-way-to-compress-serialized-python-data\n",
     "- [X] Create a preprocessing step for poi snapping\n",
     "- [X] fix: minimum cycle basis is not necessarily face cycle basis (https://en.wikipedia.org/wiki/Cycle_basis#In_planar_graphs)\n",
     "- [X] Create testing possibility with random poi data, without poi snapping\n",
@@ -363,7 +363,7 @@
     "nodes_done = set()\n",
     "numloops = 0\n",
     "allloops_generator = nx.simple_cycles(Gnx, length_bound=LOOP_NUMNODE_BOUND)\n",
-    "for c in tqdm(allloops_generator, desc=\"Find all loops\"):\n",
+    "for c in tqdm(allloops_generator, desc=\"Generate all loops\"):\n",
     "    sourcenode = c[0]\n",
     "    c_length = get_loop_length(c)\n",
     "    c_max_slope = get_loop_max_slope(c)\n",
@@ -398,15 +398,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "alllooplengths = np.zeros(numloops)\n",
-    "allloopnumnodes = np.zeros(numloops, dtype=int)\n",
-    "allloopmaxslopes = np.zeros(numloops)\n",
+    "alllooplengths = np.zeros(numloops, dtype=np.float32)\n",
+    "allloopnumnodes = np.zeros(numloops, dtype=np.uint8)\n",
+    "allloopmaxslopes = np.zeros(numloops, dtype=np.uint16)\n",
     "i = 0\n",
     "for j in tqdm(allloops, desc=\"Extract global loop properties\"):\n",
     "    l = len(allloops[j][\"lengths\"])\n",
     "    alllooplengths[i : i + l] = allloops[j][\"lengths\"]\n",
     "    allloopnumnodes[i : i + l] = allloops[j][\"numnodes\"]\n",
-    "    allloopmaxslopes[i : i + l] = allloops[j][\"max_slopes\"]\n",
+    "    allloopmaxslopes[i : i + l] = (np.array(allloops[j][\"max_slopes\"]) * 100).astype(\n",
+    "        np.uint16\n",
+    "    )  # max_slopes are multiplied by 100 for storage as uint16\n",
     "    i += l"
    ]
   },
