Add lollandfalster results

--- a/code/03_scenario_analysis.ipynb
+++ b/code/03_scenario_analysis.ipynb
@@ -22,7 +22,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-10-07  \n",
-    "Last modified: 2024-10-11"
+    "Last modified: 2024-10-12"
    ]
   },
   {
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "%run -i setup_parameters.py\n",
-    "load_data = True  # Set to False if data are huge and have already been loaded\n",
+    "load_data = False  # Set to False if data are huge and have already been loaded\n",
     "debug = True  # Set to True for extra plots and verbosity\n",
     "\n",
     "if PLOTLOGSCALE:\n",
@@ -224,7 +224,7 @@
    "outputs": [],
    "source": [
     "allloops_bound = {}\n",
-    "for sourcenode in tqdm(allloops, desc=\"Restrict to scenario lenghts\"):\n",
+    "for sourcenode in tqdm(allloops, desc=\"Restrict to scenario lengths\"):\n",
     "    lengths_this = allloops[sourcenode][\"lengths\"] * MPERUNIT\n",
     "    mask_this = (lengths_this >= RESTRICTIONS[\"looplength_min\"]) & (\n",
     "        lengths_this <= RESTRICTIONS[\"looplength_max\"]\n",
