--- a/code/02_basic_statistics.ipynb
+++ b/code/02_basic_statistics.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-29  \n",
-    "Last modified: 2024-10-07"
+    "Last modified: 2024-10-16"
    ]
   },
   {
@@ -30,7 +30,7 @@
     "## To do\n",
     "- [X] Plot avg/median loop length per node: network, distribution (for all scenarios)\n",
     "- [X] Plot distrib of length of loops that have nodes == loop_numnode_bound. To see whether we should increase the bound.\n",
-    "- [ ] Heatmaps over area?"
+    "- [ ] Visualize link lengths (conforming/non-conforming)"
    ]
   },
   {
