--- a/code/03_scenario_analysis.ipynb
+++ b/code/03_scenario_analysis.ipynb
@@ -22,7 +22,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-10-07  \n",
-    "Last modified: 2024-10-12"
+    "Last modified: 2024-10-16"
    ]
   },
   {
@@ -32,12 +32,27 @@
    "source": [
     "## To do\n",
     "- [X] Refactor with functions for restrictions\n",
-    "- [ ] Sudden bad weather/accident scenario for family: if k km travelled, what is shortest path back and how much overlap?\n",
-    "- [ ] Re-think or drop due to coastline effects: Kommune cohesion: Loops vs distance to nearest kommune\n",
-    "- [ ] How much of network due to topography / existing paths?\n",
-    "- [ ] Study ideal triangle grid?\n",
-    "- [ ] Quantify?: information explosion huge first, but gets smaller with each node passed\n",
     "- [X] POI analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e37a8962-c87e-49f4-b16a-8cc620114a2e",
+   "metadata": {},
+   "source": [
+    "## To do future notebooks/viz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebe47e89-ae8b-4262-8c2a-5048c5459403",
+   "metadata": {},
+   "source": [
+    "- [ ] Stitch together for DK\n",
+    "- [ ] Polish nw plotting: colors, proj, transparency, keep values fixed\n",
+    "- [ ] Visualize face loops with colored polygons instead of links\n",
+    "- [ ] Study ideal knude net (triangle grid,..). What is an ideal knude network? Geometric consistency of DKNT design principles?\n",
+    "- [ ] Distribution/spatial clustering of slopes, pois in DK. How does it affect loops? Compare with random redistribution. Easy to add few POIS to dramatically increase coverage? \"identify/fix POI deserts\""
    ]
   },
   {
@@ -56,7 +71,7 @@
    "outputs": [],
    "source": [
     "%run -i setup_parameters.py\n",
-    "load_data = False  # Set to False if data are huge and have already been loaded\n",
+    "load_data = True  # Set to False if data are huge and have already been loaded\n",
     "debug = True  # Set to True for extra plots and verbosity\n",
     "\n",
     "if PLOTLOGSCALE:\n",
