--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -37,7 +37,8 @@
    "source": [
     "- [ ] Double-check loop/link lengths. For example 3-loop east of Faxe\n",
     "- [ ] Double-check edge_ids during simplifications\n",
-    "- [ ] Re-think or drop due to coastline effects: Add node distances to closest kommune boundary\n",
+    "- [ ] Semilogy scale for loop lengths\n",
+    "- [ ] Add LOOP_LENGTH_BOUND and save only <=40km loops, to allow DK-level plots\n",
     "- [X] Compress results (Jutland+Fyn = 50GB), by storing data smarter or algorithm, e.g. https://stackoverflow.com/questions/57983431/whats-the-most-space-efficient-way-to-compress-serialized-python-data\n",
     "- [X] Create a preprocessing step for poi snapping\n",
     "- [X] fix: minimum cycle basis is not necessarily face cycle basis (https://en.wikipedia.org/wiki/Cycle_basis#In_planar_graphs)\n",
