--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-24  \n",
-    "Last modified: 2024-10-12"
+    "Last modified: 2024-10-21"
    ]
   },
   {
@@ -38,7 +38,7 @@
     "- [ ] Double-check loop/link lengths. For example 3-loop east of Faxe\n",
     "- [ ] Double-check edge_ids during simplifications\n",
     "- [ ] Semilogy scale for loop lengths\n",
-    "- [ ] Add LOOP_LENGTH_BOUND and save only <=40km loops, to allow DK-level plots\n",
+    "- [X] Add LOOP_LENGTH_BOUND and save only <=40km loops, to allow DK-level plots\n",
     "- [X] Compress results (Jutland+Fyn = 50GB), by storing data smarter or algorithm, e.g. https://stackoverflow.com/questions/57983431/whats-the-most-space-efficient-way-to-compress-serialized-python-data\n",
     "- [X] Create a preprocessing step for poi snapping\n",
     "- [X] fix: minimum cycle basis is not necessarily face cycle basis (https://en.wikipedia.org/wiki/Cycle_basis#In_planar_graphs)\n",
@@ -311,6 +311,9 @@
    "execution_count": null,
    "id": "9b6987ea",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -363,33 +366,47 @@
     "allloops = {}\n",
     "nodes_done = set()\n",
     "numloops = 0\n",
-    "allloops_generator = nx.simple_cycles(Gnx, length_bound=LOOP_NUMNODE_BOUND)\n",
+    "allloops_generator = nx.simple_cycles(\n",
+    "    Gnx, length_bound=LOOP_NUMNODE_BOUND\n",
+    ")  # length refers to number of nodes\n",
     "for c in tqdm(allloops_generator, desc=\"Generate all loops\"):\n",
     "    sourcenode = c[0]\n",
     "    c_length = get_loop_length(c)\n",
-    "    c_max_slope = get_loop_max_slope(c)\n",
-    "    c_water = get_loop_water_profile(c)\n",
-    "    c_poi_diversity = get_loop_poi_diversity(c)\n",
-    "    for sourcenode in c:\n",
-    "        numloops += 1\n",
-    "        if sourcenode in nodes_done:\n",
-    "            allloops[sourcenode][\"loops\"].append(c)\n",
-    "            allloops[sourcenode][\"lengths\"].append(c_length)\n",
-    "            allloops[sourcenode][\"numnodes\"].append(len(c))\n",
-    "            allloops[sourcenode][\"max_slopes\"].append(c_max_slope)\n",
-    "            allloops[sourcenode][\"water_profile\"].append(c_water)\n",
-    "            allloops[sourcenode][\"poi_diversity\"].append(c_poi_diversity)\n",
-    "        else:\n",
-    "            allloops[sourcenode] = {\n",
-    "                \"loops\": [c],\n",
-    "                \"lengths\": [c_length],\n",
-    "                \"numnodes\": [len(c)],\n",
-    "                \"max_slopes\": [c_max_slope],\n",
-    "                \"water_profile\": [c_water],\n",
-    "                \"poi_diversity\": [c_poi_diversity],\n",
-    "            }\n",
-    "            nodes_done.add(sourcenode)\n",
-    "print(\"Found \" + str(numloops) + \" loops for length bound \" + str(LOOP_NUMNODE_BOUND))"
+    "    # LOOP_LENGTH_BOUND is False for no limit, or a number (meters)\n",
+    "    if not LOOP_LENGTH_BOUND or c_length * MPERUNIT <= LOOP_LENGTH_BOUND:\n",
+    "        c_max_slope = get_loop_max_slope(c)\n",
+    "        c_water = get_loop_water_profile(c)\n",
+    "        c_poi_diversity = get_loop_poi_diversity(c)\n",
+    "        for sourcenode in c:\n",
+    "            numloops += 1\n",
+    "            if sourcenode in nodes_done:\n",
+    "                allloops[sourcenode][\"loops\"].append(c)\n",
+    "                allloops[sourcenode][\"lengths\"].append(c_length)\n",
+    "                allloops[sourcenode][\"numnodes\"].append(len(c))\n",
+    "                allloops[sourcenode][\"max_slopes\"].append(c_max_slope)\n",
+    "                allloops[sourcenode][\"water_profile\"].append(c_water)\n",
+    "                allloops[sourcenode][\"poi_diversity\"].append(c_poi_diversity)\n",
+    "            else:\n",
+    "                allloops[sourcenode] = {\n",
+    "                    \"loops\": [c],\n",
+    "                    \"lengths\": [c_length],\n",
+    "                    \"numnodes\": [len(c)],\n",
+    "                    \"max_slopes\": [c_max_slope],\n",
+    "                    \"water_profile\": [c_water],\n",
+    "                    \"poi_diversity\": [c_poi_diversity],\n",
+    "                }\n",
+    "                nodes_done.add(sourcenode)\n",
+    "if LOOP_LENGTH_BOUND:\n",
+    "    llb_string = \" and length bound \" + str(LOOP_LENGTH_BOUND) + \"m\"\n",
+    "else:\n",
+    "    llb_string = \"\"\n",
+    "print(\n",
+    "    \"Found \"\n",
+    "    + str(numloops)\n",
+    "    + \" loops for number of nodes bound \"\n",
+    "    + str(LOOP_NUMNODE_BOUND)\n",
+    "    + llb_string\n",
+    ")"
    ]
   },
   {
@@ -453,8 +470,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if LOOP_LENGTH_BOUND:\n",
+    "    llb_string = \"_maxlength\" + str(LOOP_LENGTH_BOUND)\n",
+    "else:\n",
+    "    llb_string = \"\"\n",
+    "\n",
     "with open(\n",
-    "    PATH[\"data_out\"] + \"loopcensus_\" + str(LOOP_NUMNODE_BOUND) + \".pkl\", \"wb\"\n",
+    "    PATH[\"data_out\"] + \"loopcensus_\" + str(LOOP_NUMNODE_BOUND) + llb_string + \".pkl\",\n",
+    "    \"wb\",\n",
     ") as f:\n",
     "    pickle.dump(allloops, f)\n",
     "    pickle.dump(alllooplengths, f)\n",
