--- a/code/02_basic_statistics.ipynb
+++ b/code/02_basic_statistics.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-29  \n",
-    "Last modified: 2024-10-16"
+    "Last modified: 2024-10-21"
    ]
   },
   {
@@ -95,8 +95,18 @@
    "outputs": [],
    "source": [
     "if load_data:\n",
+    "    if LOOP_LENGTH_BOUND:\n",
+    "        llb_string = \"_maxlength\" + str(LOOP_LENGTH_BOUND)\n",
+    "    else:\n",
+    "        llb_string = \"\"\n",
+    "\n",
     "    with open(\n",
-    "        PATH[\"data_out\"] + \"loopcensus_\" + str(LOOP_NUMNODE_BOUND) + \".pkl\", \"rb\"\n",
+    "        PATH[\"data_out\"]\n",
+    "        + \"loopcensus_\"\n",
+    "        + str(LOOP_NUMNODE_BOUND)\n",
+    "        + llb_string\n",
+    "        + \".pkl\",\n",
+    "        \"rb\",\n",
     "    ) as f:\n",
     "        allloops = pickle.load(f)\n",
     "        alllooplengths = pickle.load(f)\n",
