--- a/code/03_scenario_analysis.ipynb
+++ b/code/03_scenario_analysis.ipynb
@@ -22,7 +22,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-10-07  \n",
-    "Last modified: 2024-10-16"
+    "Last modified: 2024-10-21"
    ]
   },
   {
@@ -124,8 +124,18 @@
    "outputs": [],
    "source": [
     "if load_data:\n",
+    "    if LOOP_LENGTH_BOUND:\n",
+    "        llb_string = \"_maxlength\" + str(LOOP_LENGTH_BOUND)\n",
+    "    else:\n",
+    "        llb_string = \"\"\n",
+    "\n",
     "    with open(\n",
-    "        PATH[\"data_out\"] + \"loopcensus_\" + str(LOOP_NUMNODE_BOUND) + \".pkl\", \"rb\"\n",
+    "        PATH[\"data_out\"]\n",
+    "        + \"loopcensus_\"\n",
+    "        + str(LOOP_NUMNODE_BOUND)\n",
+    "        + llb_string\n",
+    "        + \".pkl\",\n",
+    "        \"rb\",\n",
     "    ) as f:\n",
     "        allloops = pickle.load(f)\n",
     "        alllooplengths = pickle.load(f)\n",
