Retain x and y coordinates in graph

--- a/code/00_network_preprocessing.ipynb
+++ b/code/00_network_preprocessing.ipynb
@@ -23,7 +23,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-10-01  \n",
-    "Last modified: 2024-10-07"
+    "Last modified: 2024-10-21"
    ]
   },
   {
@@ -189,10 +189,16 @@
     "    weights=False,\n",
     "    edge_attrs=[\"weight\", \"edge_id\", \"max_slope\", \"geometry\"],\n",
     ")\n",
-    "for v in G.vs:  # Add id_cykelknudepkt\n",
+    "for v in G.vs:  # Add node infos: id_cykelknudepkt, x, y\n",
     "    G.vs[v.index][\"id_cykelknudepkt\"] = nodes.loc[nodes[\"nodeID\"] == v[\"name\"]].iloc[0][\n",
     "        \"id_cykelknudepkt\"\n",
-    "    ]"
+    "    ]\n",
+    "    G.vs[v.index][\"x\"] = round(\n",
+    "        nodes.loc[nodes[\"nodeID\"] == v[\"name\"]].iloc[0].geometry.x, 3\n",
+    "    )\n",
+    "    G.vs[v.index][\"y\"] = round(\n",
+    "        nodes.loc[nodes[\"nodeID\"] == v[\"name\"]].iloc[0].geometry.y, 3\n",
+    "    )"
    ]
   },
   {
