Finetune faceloop colors

--- a/code/02DK_basic_statistics.ipynb
+++ b/code/02DK_basic_statistics.ipynb
@@ -450,35 +450,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(8, 3))\n",
-    "axes1 = fig.add_axes([0.08, 0.16, 0.4, 0.75])\n",
-    "axes2 = fig.add_axes([0.58, 0.16, 0.4, 0.75])\n",
+    "# All units in km\n",
+    "xmax = 42\n",
     "\n",
-    "facelooplengths = [c * MPERUNIT for c in faceloops.length]\n",
+    "fig = plt.figure(figsize=(4, 3))\n",
+    "axes = fig.add_axes([0.16, 0.16, 0.76, 0.75])\n",
     "\n",
-    "histxy = axes1.hist(\n",
-    "    facelooplengths, bins=[i * 1000 / MPERUNIT for i in list(range(50))], density=False\n",
+    "facelooplengths = [c * MPERUNIT / 1000 for c in faceloops.length]\n",
+    "\n",
+    "N, bins, patches = axes.hist(\n",
+    "    facelooplengths,\n",
+    "    bins=list(range(50)),\n",
+    "    density=False,\n",
+    "    edgecolor=\"#222222\",\n",
+    "    linewidth=0,\n",
     ")\n",
-    "if MPERUNIT == 1000:\n",
-    "    axes1.set_xlabel(\"Length [km]\")\n",
-    "elif MPERUNIT == 1:\n",
-    "    axes1.set_xlabel(\"Length [m]\")\n",
-    "else:\n",
-    "    axes1.set_xlabel(\"Length\")\n",
-    "axes1.set_ylabel(\"Frequency\")\n",
-    "axes1.set_title(\"Face loop lengths\")\n",
-    "axes1.plot([FACELOOP_LIMIT[0], FACELOOP_LIMIT[0]], [0, max(histxy[0])], \":k\")\n",
-    "axes1.plot([FACELOOP_LIMIT[1], FACELOOP_LIMIT[1]], [0, max(histxy[0])], \":r\")\n",
-    "axes1.text(\n",
-    "    (FACELOOP_LIMIT[0] + FACELOOP_LIMIT[1]) / 2,\n",
-    "    max(histxy[0]),\n",
+    "\n",
+    "for i in range(0, FACELOOP_LIMIT[0] // 1000):\n",
+    "    patches[i].set_facecolor(loop_classification_colors[\"too_short\"])\n",
+    "for i in range(FACELOOP_LIMIT[0] // 1000, FACELOOP_LIMIT[1] // 1000):\n",
+    "    patches[i].set_facecolor(loop_classification_colors[\"ideal_range\"])\n",
+    "for i in range(FACELOOP_LIMIT[1] // 1000, len(patches)):\n",
+    "    patches[i].set_facecolor(loop_classification_colors[\"too_long\"])\n",
+    "\n",
+    "\n",
+    "axes.set_xlabel(\"Length [km]\")\n",
+    "axes.set_ylabel(\"Frequency\")\n",
+    "axes.set_title(\"Face loop lengths\")\n",
+    "axes.text(\n",
+    "    (FACELOOP_LIMIT[0] + FACELOOP_LIMIT[1]) / 2000,\n",
+    "    max(N) * 0.1,\n",
     "    str(\n",
     "        round(\n",
     "            len(\n",
     "                [\n",
     "                    i\n",
     "                    for i, x in enumerate(facelooplengths)\n",
-    "                    if (x >= FACELOOP_LIMIT[0] and x <= FACELOOP_LIMIT[1])\n",
+    "                    if (x >= FACELOOP_LIMIT[0] / 1000 and x <= FACELOOP_LIMIT[1] / 1000)\n",
     "                ]\n",
     "            )\n",
     "            / len(facelooplengths)\n",
@@ -488,13 +496,20 @@
     "    + \"%\",\n",
     "    horizontalalignment=\"center\",\n",
     "    verticalalignment=\"top\",\n",
+    "    color=lighten_color(loop_classification_colors[\"ideal_range\"], 4),\n",
     ")\n",
-    "axes1.text(\n",
-    "    FACELOOP_LIMIT[0] * 0.95,\n",
-    "    max(histxy[0]),\n",
+    "axes.text(\n",
+    "    FACELOOP_LIMIT[0] / 1000 * 0.95,\n",
+    "    max(N) * 0.1,\n",
     "    str(\n",
     "        round(\n",
-    "            len([i for i, x in enumerate(facelooplengths) if (x < FACELOOP_LIMIT[0])])\n",
+    "            len(\n",
+    "                [\n",
+    "                    i\n",
+    "                    for i, x in enumerate(facelooplengths)\n",
+    "                    if (x < FACELOOP_LIMIT[0] / 1000)\n",
+    "                ]\n",
+    "            )\n",
     "            / len(facelooplengths)\n",
     "            * 100\n",
     "        )\n",
@@ -502,13 +517,20 @@
     "    + \"%\",\n",
     "    horizontalalignment=\"right\",\n",
     "    verticalalignment=\"top\",\n",
+    "    color=lighten_color(loop_classification_colors[\"too_short\"], 1.8),\n",
     ")\n",
-    "axes1.text(\n",
-    "    FACELOOP_LIMIT[1] * 1.01,\n",
-    "    max(histxy[0]),\n",
+    "axes.text(\n",
+    "    FACELOOP_LIMIT[1] / 1000 * 1.1,\n",
+    "    max(N) * 0.1,\n",
     "    str(\n",
     "        round(\n",
-    "            len([i for i, x in enumerate(facelooplengths) if (x > FACELOOP_LIMIT[1])])\n",
+    "            len(\n",
+    "                [\n",
+    "                    i\n",
+    "                    for i, x in enumerate(facelooplengths)\n",
+    "                    if (x > FACELOOP_LIMIT[1] / 1000)\n",
+    "                ]\n",
+    "            )\n",
     "            / len(facelooplengths)\n",
     "            * 100\n",
     "        )\n",
@@ -516,18 +538,9 @@
     "    + \"%\",\n",
     "    horizontalalignment=\"left\",\n",
     "    verticalalignment=\"top\",\n",
-    "    color=\"red\",\n",
+    "    color=lighten_color(loop_classification_colors[\"too_long\"], 2.2),\n",
     ")\n",
-    "axes1.set_xlim([0, 50000 / MPERUNIT])\n",
-    "\n",
-    "\n",
-    "# To do: Retrieve somehow number of nodes or edges per faceloop\n",
-    "# axes2.hist(\n",
-    "#     [c[\"numnodes\"] for c in faceloops.values()], bins=list(range(30)), density=False\n",
-    "# )\n",
-    "# axes2.set_xlabel(\"Nodes\")\n",
-    "# axes2.set_title(\"Face loop nodes\")\n",
-    "# axes2.set_xlim([0, 30])\n",
+    "axes.set_xlim([0, xmax])\n",
     "\n",
     "fig.savefig(PATH[\"plot\"] + \"faceloopstats\");"
    ]
@@ -550,7 +563,6 @@
    "outputs": [],
    "source": [
     "loops = faceloops\n",
-    "# loops[\"length_m\"] = loops.length / 1000\n",
     "\n",
     "loops[\"length_class\"] = loops.length.apply(\n",
     "    lambda x: classify_looplength(\n",
@@ -566,19 +578,113 @@
     "    fp = PATH[\"data_out\"] + f\"faceloops_{classification}.gpkg\"\n",
     "    loops[loops[\"length_class\"] == classification].to_file(fp, index=False)\n",
     "\n",
-    "fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(8, 8))\n",
+    "fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(10, 10))\n",
     "layer_names = []\n",
     "for classification in loops.length_class.unique():\n",
     "    df = gpd.read_file(PATH[\"data_out\"] + f\"faceloops_{classification}.gpkg\")\n",
     "    # df.to_crs(epsg=23032, inplace=True)\n",
     "    df.plot(\n",
     "        ax=ax,\n",
-    "        color=rgb2hex(loop_classification_colors[classification]),\n",
-    "        edgecolor=\"black\",\n",
+    "        color=loop_classification_colors[classification],\n",
+    "        edgecolor=\"#222222\",\n",
     "        aspect=1,\n",
     "        linewidth=0.2,\n",
     "    )\n",
     "ax.set_axis_off()\n",
+    "\n",
+    "\n",
+    "xmax = 42\n",
+    "axes = fig.add_axes([0.62, 0.68, 0.24, 0.2])\n",
+    "\n",
+    "facelooplengths = [c * MPERUNIT / 1000 for c in faceloops.length]\n",
+    "\n",
+    "N, bins, patches = axes.hist(\n",
+    "    facelooplengths,\n",
+    "    bins=list(range(50)),\n",
+    "    density=False,\n",
+    "    edgecolor=\"#222222\",\n",
+    "    linewidth=0,\n",
+    ")\n",
+    "\n",
+    "for i in range(0, FACELOOP_LIMIT[0] // 1000):\n",
+    "    patches[i].set_facecolor(loop_classification_colors[\"too_short\"])\n",
+    "for i in range(FACELOOP_LIMIT[0] // 1000, FACELOOP_LIMIT[1] // 1000):\n",
+    "    patches[i].set_facecolor(loop_classification_colors[\"ideal_range\"])\n",
+    "for i in range(FACELOOP_LIMIT[1] // 1000, len(patches)):\n",
+    "    patches[i].set_facecolor(loop_classification_colors[\"too_long\"])\n",
+    "\n",
+    "\n",
+    "axes.set_xlabel(\"Length [km]\")\n",
+    "axes.set_ylabel(\"Frequency\")\n",
+    "axes.set_title(\"Face loop lengths\")\n",
+    "axes.text(\n",
+    "    (FACELOOP_LIMIT[0] + FACELOOP_LIMIT[1]) / 2000,\n",
+    "    max(N) * 0.1,\n",
+    "    str(\n",
+    "        round(\n",
+    "            len(\n",
+    "                [\n",
+    "                    i\n",
+    "                    for i, x in enumerate(facelooplengths)\n",
+    "                    if (x >= FACELOOP_LIMIT[0] / 1000 and x <= FACELOOP_LIMIT[1] / 1000)\n",
+    "                ]\n",
+    "            )\n",
+    "            / len(facelooplengths)\n",
+    "            * 100\n",
+    "        )\n",
+    "    )\n",
+    "    + \"%\",\n",
+    "    horizontalalignment=\"center\",\n",
+    "    verticalalignment=\"top\",\n",
+    "    color=lighten_color(loop_classification_colors[\"ideal_range\"], 5),\n",
+    ")\n",
+    "axes.text(\n",
+    "    FACELOOP_LIMIT[0] / 1000 * 0.95,\n",
+    "    max(N) * 0.1,\n",
+    "    str(\n",
+    "        round(\n",
+    "            len(\n",
+    "                [\n",
+    "                    i\n",
+    "                    for i, x in enumerate(facelooplengths)\n",
+    "                    if (x < FACELOOP_LIMIT[0] / 1000)\n",
+    "                ]\n",
+    "            )\n",
+    "            / len(facelooplengths)\n",
+    "            * 100\n",
+    "        )\n",
+    "    )\n",
+    "    + \"%\",\n",
+    "    horizontalalignment=\"right\",\n",
+    "    verticalalignment=\"top\",\n",
+    "    color=lighten_color(loop_classification_colors[\"too_short\"], 5),\n",
+    ")\n",
+    "axes.text(\n",
+    "    FACELOOP_LIMIT[1] / 1000 * 1.1,\n",
+    "    max(N) * 0.1,\n",
+    "    str(\n",
+    "        round(\n",
+    "            len(\n",
+    "                [\n",
+    "                    i\n",
+    "                    for i, x in enumerate(facelooplengths)\n",
+    "                    if (x > FACELOOP_LIMIT[1] / 1000)\n",
+    "                ]\n",
+    "            )\n",
+    "            / len(facelooplengths)\n",
+    "            * 100\n",
+    "        )\n",
+    "    )\n",
+    "    + \"%\",\n",
+    "    horizontalalignment=\"left\",\n",
+    "    verticalalignment=\"top\",\n",
+    "    color=lighten_color(loop_classification_colors[\"too_long\"], 2.2),\n",
+    ")\n",
+    "axes.set_xlim([0, xmax])\n",
+    "\n",
+    "# fig.savefig(PATH[\"plot\"] + \"faceloopstats\");\n",
+    "\n",
+    "\n",
     "plt.tight_layout()\n",
     "fig.savefig(PATH[\"plot\"] + \"faceloops\")"
    ]
